<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameField">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:contentDescription="@string/contDescrScores"
        android:src="@drawable/sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="5dp"/>

    <TextView
        android:id="@+id/highScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25sp"
        android:layout_marginVertical="28sp"
        android:text="@string/high_score"
        android:textColor="@color/yellowish_white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/riffic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25sp"
        android:layout_marginVertical="8sp"
        android:text="@string/score"
        android:textColor="@color/yellowish_white"
        android:textSize="20sp"
        android:fontFamily="@font/riffic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highScoreText" />

    <ImageButton
        android:id="@+id/upBtn"
        android:layout_width="245dp"
        android:layout_height="130dp"
        android:background="@drawable/up"
        android:contentDescription="@string/contDescrUpBtn"
        android:onClick="buttonClicked"
        android:tag="up"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageButton
        android:id="@+id/downBtn"
        android:layout_width="245dp"
        android:layout_height="130dp"
        android:layout_marginTop="126dp"
        android:background="@drawable/down"
        android:contentDescription="@string/contDescrDownBtn"
        android:onClick="buttonClicked"
        android:tag="down"
        app:layout_constraintEnd_toEndOf="@+id/upBtn"
        app:layout_constraintStart_toStartOf="@id/upBtn"
        app:layout_constraintTop_toBottomOf="@id/upBtn" />

    <ImageButton
        android:id="@+id/leftBtn"
        android:layout_width="130dp"
        android:layout_height="245dp"
        android:layout_marginEnd="184dp"
        android:background="@drawable/left"
        android:contentDescription="@string/contDescrLeftBtn"
        android:onClick="buttonClicked"
        android:tag="left"
        app:layout_constraintBottom_toBottomOf="@id/downBtn"
        app:layout_constraintEnd_toEndOf="@id/upBtn"
        app:layout_constraintTop_toTopOf="@id/upBtn" />

    <ImageButton
        android:id="@+id/rightBtn"
        android:layout_width="130dp"
        android:layout_height="245dp"
        android:layout_marginStart="184dp"
        android:background="@drawable/right"
        android:contentDescription="@string/contDescrRightBtn"
        android:onClick="buttonClicked"
        android:tag="right"
        app:layout_constraintBottom_toBottomOf="@id/downBtn"
        app:layout_constraintStart_toStartOf="@id/upBtn"
        app:layout_constraintTop_toTopOf="@id/upBtn" />

    <TextView
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:text="@string/standard_mode"
        android:textColor="@color/yellowish_white"
        android:textSize="20sp"
        android:fontFamily="@font/riffic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/turnTextBackground"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/turnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp_turn"
        android:textColor="@color/yellowish_white"
        android:textSize="35sp"
        android:fontFamily="@font/riffic"
        app:layout_constraintBottom_toBottomOf="@id/turnTextBackground"
        app:layout_constraintEnd_toEndOf="@id/turnTextBackground"
        app:layout_constraintStart_toStartOf="@id/turnTextBackground"
        app:layout_constraintTop_toTopOf="@id/turnTextBackground"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>