<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/applogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="250sp"
        android:layout_height="80sp"
        android:text="@string/start_btn"
        android:textSize="28sp"
        android:textColor="@color/yellowish_white"
        android:fontFamily="@font/riffic"
        android:background="@drawable/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/randomModeBtn"
        android:layout_width="250sp"
        android:layout_height="80sp"
        android:background="@drawable/button1"
        android:fontFamily="@font/riffic"
        android:text="@string/random_mode_btn"
        android:textColor="@color/yellowish_white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startBtn"
        app:layout_constraintVertical_bias="0.2" />

    <ImageButton
        android:id="@+id/aboutBtn"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:background="@drawable/about_us_toggle"
        android:contentDescription="@string/contDescrAboutBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.97"/>

    <ImageButton
        android:id="@+id/soundToggle"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:background="@drawable/sound_on_toggle"
        android:contentDescription="@string/contDescrSoundToggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.04"/>

</androidx.constraintlayout.widget.ConstraintLayout>